2008-02-19 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: possibiliy to build gputils from
	  a release package or svn repository if FROM_SVN is defined

2008-02-17 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc-4.2.3, w32api-3.11,
	  mingw-runtime-3.14

2008-01-12 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS version 2.34
	* crontab.txt: execute .bash_profile instead of .bashrc on cf-x86

2007-09-03 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: get gputils sources from CVS

2007-08-04 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw/Makefile: upgraded to gcc-4.2.1,
	  mingw-runtime-3.13, w32api-3.10

2007-06-24 Borut Razem <borut.razem AT siol.net>

	* packages/build.readline: fixed support for universal binaries
	  on Darwin

2007-06-12 Borut Razem <borut.razem AT siol.net>

	* packages/build.gpsim/Makefile: use new svn URL scheme

2007-06-01 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw/Makefile: upgraded to gcc-4.2.0,
	  binutils-2.17, mingw-runtime-3.12, w32api-3.9

2007-05-05 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS version 2.27

2007-04-14 Borut Razem <borut.razem AT siol.net>

	* crontab.txt: run do-upload in a separate make task on cf-x86 too

2007-04-10 Borut Razem <borut.razem AT siol.net>

	* crontab.txt: run do-upload in a separate make task in order to
	  prevent starting upload before other make jobs are finished
	* bin/dcf.sh: removed duplicated rm -f $DCF_LOCK

2007-03-31 Borut Razem <borut.razem AT siol.net>

	* crontab.txt: define "make" arguments on command line
	* bin/dcf.sh: introduced trap, relative rsync

2007-03-30 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: enhanced logging

2007-03-25 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: added Distributed Compile Farm
	* crontab.txt: updated
